--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     background-color: #0f1111;
     color: white;
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 .nav-logo{
     height: 50px;
@@ -31,13 +33,49 @@
 
 .addr_1{
     color: #cccccc;
-    font-size: 0.90rem;
+    font-size: 0.70rem;
+    margin: 0 15px;
 }
 .addr_2{
     color: #ffffff;
-    font-size: 1rem;
+    font-size: 0.85rem;
+    margin: 0 5px;
 }
 .add_icon{
     display: flex;
     align-items: center;
 }
+
+/*BOX 3 SEARCH*/
+.nav_search{
+    display: flex;
+    background-color: #febd68;
+    width: 600px;
+    height: 40px;
+    border-radius: 4px;
+    justify-content: space-evenly;
+}
+.search_select{
+    background-color: #e6e6e6;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+.search_input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.search_icon{
+    width: 55px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;        
+    font-size: 1.2rem;
+    color: #0f1111;
+}
+
+/* BOX 4*/
