--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@
     border-radius: 4px;
     justify-content: space-evenly;
 }
+.nav_search:hover{
+    border: 2px solid orange;
+}
 .search_select{
     background-color: #e6e6e6;
     width: 50px;
@@ -79,3 +82,47 @@
 }
 
 /* BOX 4*/
+
+span{
+    font-size: 0.8rem;
+}
+.nav_second{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+/* BOX 6 */
+.navCart{
+    display: flex;
+}
+.navCart i {
+    font-size: 33px;
+}
+.navCart p{
+    padding:17px 0 0 0 ;
+    font-weight: 600;
+}
+
+/* menu bar in header */
+
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.panel_ops p{
+    display: inline;
+    padding-left: 17px;
+    font-size: 0.9em;
+}
+.panel_ops{
+    width: 95%;
+}
+.panel_all{
+    /* width: 26%; */
+    font-weight: 600;
+    font-size: 0.9em;
+}
