--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 .nav_search{
     display: flex;
     background-color: #febd68;
-    width: 600px;
+    width: 1000px;
     height: 40px;
     border-radius: 4px;
     justify-content: space-evenly;
@@ -125,4 +125,146 @@ span{
     /* width: 26%; */
     font-weight: 600;
     font-size: 0.9em;
+}
+
+
+/**HERO SECTION **/
+
+.hero_section{
+    background-image:url("hero_image.jpg");
+    height: 350px;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    
+}
+.hero_msg{
+    background-color: white;
+    color: black;
+    height: 40px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    margin-bottom: 20px;
+}
+.hero_msg a{
+    color: #007185;
+}
+
+/* BOXES */
+
+.shop_section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+.box{
+    /* border: 2px solid black; */
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+    margin: 15px;
+}
+.box_content{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.box_img{
+    height: 320px;
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.box_content p {
+    color: #007185;
+}
+
+/* fOOTER */
+
+footer{
+    margin-top: 15px;
+}
+
+.foot_pannel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+
+.foot_pannel2{
+    /* margin-top: 20px; */
+    height: 300px;
+    background-color: #222f3d;
+    color: #dddddd;
+    display: flex;
+    justify-content: space-evenly;
+}
+.foot_pannel2 ul a{
+    color: #dddddd;
+    display: block;
+    font-size: 0.80rem;
+    text-decoration: none;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.foot_pannel2 ul p{
+    color: #ffffff;
+    margin-top: 20px;
+    font-weight: 700;
+}
+
+/* FOOT PANEL 3 */
+
+.foot_pannel3{
+    background-color: #222f3d;
+    color: white;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image:url("amazon_logo.png");
+    height: 50px;
+    background-size:cover;
+    width: 100px;
+}
+
+/* FOOT PANEL 4 */
+
+.foot_pannel4{
+    background: #131a22;
+    color: white;
+    height: 80px;
+    padding-top: 25px;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
+}
+.pages{
+    text-align: center;  /* to get contents in center*/
+}
+.pages a{
+    color: white;
+    font-size: 0.75rem;
+}
+.copyright{
+    font-size: 0.7rem;
+    padding: 5px;
+    text-align: center;
 }
